# ngn

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: security-audit.md  security-audit_2026_02_27.md
src/ngn_agent/: coder.py  git.py  jira.py  main.py  validator.py
tests/: test_coder.py  test_git.py  test_jira.py  test_main.py  test_validate.py  test_validator.py
