[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ngn-agent"
version = "0.1.0"
description = "Autonomous coding agent powered by Claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27",
]

[project.scripts]
ngn-agent = "ngn_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ngn_agent"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]
